tests/sumo/spec/distribution/errors/speedDev_invalid/output.sumo
Loading net-file from 'net.net.xml' ... done (2ms).
Loading done.
